--- a/Page1.html
+++ b/Page1.html
@@ -25,6 +25,6 @@
 <div class="footer">
     <p>Page1</p>
 </div>
-<a href="https://nikozyl.github.io/ICT452/Page2">Go to Page2! </a>
+<a href="https://nikozyl.github.io/ICT452/Page2">Go to Page2! </a><!--this is a hyper link-->
 </body>
 </html>
